--- a/test.html
+++ b/test.html
@@ -3,6 +3,8 @@
     <form action="/include.php" method="POST">
       start: <input type="text" name="start_time" />
       end: <input type="text" name="end_time" />
+      section: <input type="text" value="uk-news" name="section" />
+      keyword: <input type="text" name="keyword" />
       <input type="submit" />
     </form>
   </body>
