--- a/site/index.html
+++ b/site/index.html
@@ -1,28 +1,7 @@
 <html>
-  <head>
-  	<title>Home</title>
-    <link href="CSS/bootstrap.css" rel="stylesheet">
-    <link href="CSS/styles.css" rel="stylesheet">
-  </head>
-  <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html">While Away</a>
-        <div class="nav-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="about.html">About</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <script src="JS/jquery.js"></script>
-    <script src="JS/bootstrap.min.js"></script>
-  </body>
+	<p>Someone should totally write an about paragraph here.</p>
+	<p>We will have a proper webpage soon, but for now, you can have this sexy page<p>
+	<p>
+		<a href="http://www.4chan.org/">This is fun</a>
+	</p>
 </html>
