--- a/site/index.html
+++ b/site/index.html
@@ -2,6 +2,6 @@
 	<p>Someone should totally write an about paragraph here.</p>
 	<p>We will have a proper webpage soon, but for now, you can have this sexy page<p>
 	<p>
-		<a href="http://www.4chan.org/">This is fun</a>
+		<a href="http://boards.4chan.org/mlp/">This is fun</a>
 	</p>
 </html>
