new file:   feedparser.pyc 	modified:   rss_log.py 	modified:   site/test.html

--- a/site/test.html
+++ b/site/test.html
@@ -1,8 +1,8 @@
 <html>
   <body>
     <form action="/include.php" method="POST">
-      start: <input type="text" name="start_time" />
-      end: <input type="text" name="end_time" />
+      start: <input type="text" value="2013-08-01" name="start_time" />
+      end: <input type="text" value="2013-08-06" name="end_time" />
       section: <input type="text" value="uk-news" name="section" />
       keyword: <input type="text" name="keyword" />
       <input type="submit" />
