--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,16 @@
 <html>
+	
 	<p>Someone should totally write an about paragraph here.</p>
+	
 	<p>We will have a proper webpage soon, but for now, you can have this sexy page<p>
+	
 	<p>
-		<a href="http://shrekchan.org/holyshit/index.html">This is fun</a>
+		<img src="images/logo.png" alt"this is sexy"></img>
 	</p>
+	
+	<p>
+		<a href="http://www.1227.com/">Click here</a>
+	</p>
+		This is a project for YRS 2013 which can be found <a href="https://youngrewiredstate.org/">here</a>
+	<p>
 </html>
