--- a/site/index.html
+++ b/site/index.html
@@ -1,16 +1,75 @@
-<html>
-	
-	<p>Someone should totally write an about paragraph here.</p>
-	
-	<p>We will have a proper webpage soon, but for now, you can have this sexy page<p>
-	
-	<p>
-		<img src="images/logo.png" alt"this is sexy"></img>
-	</p>
-	
-	<p>
-		<a href="http://www.1227.com/">Click here</a>
-	</p>
-		This is a project for YRS 2013 which can be found <a href="https://youngrewiredstate.org/">here</a>
-	<p>
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>Form</title>
+
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/main.css">
+	</head>
+
+	<body>
+		<!-- http://tympanus.net/Tutorials/NaturalLanguageForm/ -->
+
+		<span id="keyword-span"></span>
+		<span id="number-span"></span>
+		<span id="date-span"></span>
+
+		<form action="form.php" method="post" id="form">
+			Show me top
+
+			<select name="keyword" id="keyword">
+				<option value="news">news</option>
+				<option value="celebrity">celebrity</option>
+				<option value="health">health</option>
+				<option value="technology">technology</option>
+			</select>
+
+			stories from the past
+
+			<input type="text" value="7" name="number" id="number">
+
+			<select name="date" id="date">
+				<option value="days">days</option>
+				<option value="weeks">weeks</option>
+				<option value="months">months</option>
+			</select>
+
+			<br>
+
+			<button>Go</button>
+		</form>
+
+		<script src="js/jquery-2.0.3.min.js"></script>
+		<script>
+			$(document).ready(function() {
+				// Make select element equal to width of current option
+				// 1. Create hidden span width value of current option
+				// 2. Set width of select to width of span
+				$('#keyword').change(function() {
+					option_val = $('#keyword > option:selected').val();
+					$('#keyword-span').html(option_val);
+					$('#keyword').width($('#keyword-span').width());
+				});
+				$('#keyword').change();
+
+				$('#date').change(function() {
+					option_val = $('#date > option:selected').val();
+					$('#date-span').html(option_val);
+					$('#date').width($('#date-span').width());
+				});
+				$('#date').change();
+
+
+				// Change width of input on load, keyup, input and paste
+				function inputWidth() {
+					$('#number-span').html($('#number').val());
+					$('#number').css('width', $('#number-span').width());
+				}
+				inputWidth();
+				$('#number').bind('keyup input paste', inputWidth);				
+			})
+
+		</script>
+	</body>
 </html>
