--- a/site/index.html
+++ b/site/index.html
@@ -40,7 +40,13 @@
 			<button>Go</button>
 		</form>
 
+		<div id='test'></div>
+
 		<script src="js/jquery-2.0.3.min.js"></script>
+
+		<script type="text/javascript" src='js/get.js'></script>
+		<script type="text/javascript" src='js/whileaway.js'></script>
+			
 		<script>
 			$(document).ready(function() {
 				// Make select element equal to width of current option
