Cleaned up IDs and started styling headlines

--- a/site/index.html
+++ b/site/index.html
@@ -41,7 +41,7 @@
 				<button>Go</button>
 			</form>
 
-			<div id='test'></div>
+			<div id="headlines"></div>
 		</div>
 
 		<script src="js/jquery-2.0.3.min.js"></script>
