--- a/site/index.html
+++ b/site/index.html
@@ -45,7 +45,7 @@
 		</div>
 
 		<script src="js/jquery-2.0.3.min.js"></script>
-		<script type="text/javascript" src='js/get.js'></script>
+		<script type="text/javascript" src='js/ajax.js'></script>
 		<script type="text/javascript" src='js/whileaway.js'></script>
 	</body>
 </html>
