--- a/site/js/test-ajax.html
+++ b/site/js/test-ajax.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <script type="text/javascript" src="jquery-2.0.3.min.js"></script>
-        <script type="text/javascript" src="get.js"></script>
+        <script type="text/javascript" src="ajax.js"></script>
     </head>
     <body>
         <script type="text/javascript">
