--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Form</title>
 
-		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 
