--- a/site/test.html
+++ b/site/test.html
@@ -1,11 +1,18 @@
 <html>
-  <body>
-    <form action="/include.php" method="POST">
-      start: <input type="text" value="2013-08-01" name="start_time" />
-      end: <input type="text" value="2013-08-06" name="end_time" />
-      section: <input type="text" value="uk-news" name="section" />
-      keyword: <input type="text" name="keyword" />
-      <input type="submit" />
-    </form>
-  </body>
+	<body>
+		<form action="/include.php" method="GET">
+			<h2>Testing include.php</h2><br />
+			start: <input type="text" value="2013-08-01" name="start_time" />
+			end: <input type="text" value="2013-08-06" name="end_time" />
+			section: <input type="text" value="uk-news" name="section" />
+			keyword: <input type="text" name="keyword" />
+			<input type="submit" />
+		</form>
+		<form action="/ots.php" method="GET">
+			<h2>Testing ots.php</h2>
+			text to sum: <input type="text" name="to_sum" />
+			ratio at which to sum: <input type="text" name="ratio" />
+			<input type="submit" />
+		</form>
+	</body>
 </html>
