--- a/site/about.html
+++ b/site/about.html
@@ -3,6 +3,7 @@
 	<head>
     	<title>About</title>
         <link href="css/style_about.css" rel="stylesheet" type="text/css">
+        <link href="css/normalize.css" rel="stylesheet" type="text/css">
 	</head>
     <body>
     	<div class="header">
