--- a/site/index.html
+++ b/site/index.html
@@ -45,6 +45,7 @@
 		</div>
 
 		<script src="js/jquery-2.0.3.min.js"></script>
+		<script type="text/javascript" src='js/date.f-0.5.0-min.js'></script> <!-- http://fisforformat.sourceforge.net/#date_f -->
 		<script type="text/javascript" src='js/ajax.js'></script>
 		<script type="text/javascript" src='js/whileaway.js'></script>
 	</body>
