JAKE: leave it like that or remove form?

--- a/site/index.html
+++ b/site/index.html
@@ -16,7 +16,7 @@
 		<span id="date-span"></span>
 
 		<div id="container">
-			<form action="form.php" method="post" id="form">
+			<form id="form">
 				Show me top
 
 				<select name="keyword" id="keyword">
@@ -35,10 +35,6 @@
 					<option value="weeks">weeks</option>
 					<option value="months">months</option>
 				</select>
-
-				<br>
-
-				<button>Scoop</button>
 			</form>
 
 			<div id="headlines"></div>
