--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Form</title>
+		<title>The Scoop</title>
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 
 		<link rel="stylesheet" href="css/normalize.css">
@@ -10,12 +10,6 @@
 	</head>
 
 	<body>
-		<!-- http://tympanus.net/Tutorials/NaturalLanguageForm/ -->
-
-		<span id="keyword-span"></span>
-		<span id="number-span"></span>
-		<span id="date-span"></span>
-
 		<div id="container">
 			<form id="form">
 				Show me top
@@ -40,6 +34,10 @@
 
 			<div id="headlines"></div>
 		</div>
+
+		<span id="keyword-span"></span>
+		<span id="number-span"></span>
+		<span id="date-span"></span>
 
 		<script src="js/jquery-2.0.3.min.js"></script>
 		<script type="text/javascript" src='js/date.f-0.5.0-min.js'></script> <!-- http://fisforformat.sourceforge.net/#date_f -->
