--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@
 				Show me top
 
 				<select name="keyword" id="keyword">
-					<option value="news">news</option>
+					<option value="uk-news">news</option>
 					<option value="celebrity">celebrity</option>
 					<option value="health">health</option>
 					<option value="technology">technology</option>
