Change all occurrences of 'keyword' to 'section', added separate 'keyword' field
TO-DO: Add keyword field, list of sections

--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,7 @@
 			<form id="form">
 				Show me top
 
-				<select name="keyword" id="keyword">
+				<select name="section" id="section">
 					<option value="uk-news">news</option>
 					<option value="celebrity">celebrity</option>
 					<option value="health">health</option>
@@ -35,7 +35,7 @@
 			<div id="headlines"></div>
 		</div>
 
-		<span id="keyword-span"></span>
+		<span id="section-span"></span>
 		<span id="number-span"></span>
 		<span id="date-span"></span>
 
