--- a/site/test.html
+++ b/site/test.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
-		<form action="/include.php" method="GET">
+		<form action="include.php" method="GET">
 			<h2>Testing include.php</h2><br />
 			start: <input type="text" value="2013-08-01" name="start_time" />
 			end: <input type="text" value="2013-08-06" name="end_time" />
@@ -8,7 +8,7 @@
 			keyword: <input type="text" name="keyword" />
 			<input type="submit" />
 		</form>
-		<form action="/ots.php" method="GET">
+		<form action="ots.php" method="GET">
 			<h2>Testing ots.php</h2>
 			text to sum: <input type="text" name="to_sum" />
 			ratio at which to sum: <input type="text" name="ratio" />
