Updated About.html to actually have a description

--- a/site/about.html
+++ b/site/about.html
@@ -18,7 +18,7 @@
     	</div>
     
     	<div class="words">
-    		<p>The Scoop is a project for YRS2013 by a team from YRS Nottingham.</p>
+    		<p>The Scoop is a project for <a href="https://youngrewiredstate.org/">YRS2013</a> by a team from YRS Nottingham.</p>
             <p>Say you went on holiday for a few weeks, and you were out of the news loop, and when you got back, you just wanted to know what happened without 			   having to search through sites and papers.</p>
             <p>Well, this is where The Scoop comes in, you go to our <a href="http://thescoop.io/">website</a> and select however long you were away for and 		               what category of news you want e.g(headlines).
 			   And it pulls up the main headlines from the time you were away.
