added witty comment to footer

--- a/site/about.html
+++ b/site/about.html
@@ -28,7 +28,7 @@
     	</div>
     
     	<div class="footer">
-        	<p>blah blah copyright&copy;2013</p>
+        	<p>I still don't know how to github - Spoons 2013</p>
         </div>
     </body>
 
