--- a/site/index.html
+++ b/site/index.html
@@ -53,7 +53,7 @@
 				var articles = $('.articles li article');
 				articles.hide();
 				$('.headline').click(function() {
-					$(this).next().toggle();
+					$(this).next().toggle('200');
 					return false;
 				});
 			});
