--- a/site/index.html
+++ b/site/index.html
@@ -48,7 +48,7 @@
 		<script type="text/javascript" src="//use.typekit.net/nkw6rwp.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
-		<script>
+		<!-- <script>
 			$(document).ajaxComplete(function() {
 				var articles = $('.articles li article');
 				articles.hide();
@@ -57,6 +57,6 @@
 					return false;
 				});
 			});
-		</script>
+		</script> -->
 	</body>
 </html>
