--- a/site/index.html
+++ b/site/index.html
@@ -45,7 +45,18 @@
 		<script type="text/javascript" src='js/ajax.js'></script>
 		<script type="text/javascript" src='js/whileaway.js'></script>
 
-		<script type="text/javascript" src="//use.typekit.net/nkw6rwp.js"></script>
-		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+		<script type="text/javascript">
+
+		  var _gaq = _gaq || [];
+		  _gaq.push(['_setAccount', 'UA-43063083-1']);
+		  _gaq.push(['_trackPageview']);
+
+		  (function() {
+		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		  })();
+
+		</script>
 	</body>
 </html>
