--- a/site/index.html
+++ b/site/index.html
@@ -1,62 +1,59 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en-GB">
 	<head>
 		<meta charset="utf-8">
 		<title>The Scoop</title>
-		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
+		<meta name="viewport" content="width=device-width">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 
 	<body>
-		<div id="container">
-			<form id="form">
-				Show me top
+		<div class="container">
+			<header>
+				<h1>
+					Show me top
 
-				<select name="section" id="section">
-					<option value="world">news</option>
-					<option value="uk-news">UK</option>
-					<option value="football">football</option>
-					<option value="film">film</option>
-					<option value="business">business</option>
-					<option value="politics">politics</option>
-				</select>
+					<select name="section" id="section">
+						<option value="world">news</option>
+						<option value="uk-news">UK</option>
+						<option value="football">football</option>
+						<option value="film">film</option>
+						<option value="business">business</option>
+						<option value="politics">politics</option>
+					</select>
 
-				articles from the past
+					articles from the past
 
-				<input type="text" value="10" name="number" id="number" autocomplete="off">
+					<input type="text" value="10" name="number" id="number" autocomplete="off">
 
-				<select name="date" id="date">
-					<option value="days">days</option>
-					<option value="weeks">weeks</option>
-					<option value="months">months</option>
-				</select>
-			</form>
+					<select name="date" id="date">
+						<option value="days">days</option>
+						<option value="weeks">weeks</option>
+						<option value="months">months</option>
+					</select>
+				</h1>
+			</header>
 
-			<div id="headlines"></div>
+			<div class="news"></div>
 		</div>
 
 		<span id="section-span"></span>
 		<span id="number-span"></span>
 		<span id="date-span"></span>
 
-		<script src="js/jquery-2.0.3.min.js"></script>
-		<script type="text/javascript" src='js/date.f-0.5.0-min.js'></script> <!-- http://fisforformat.sourceforge.net/#date_f -->
-		<script type="text/javascript" src='js/ajax.js'></script>
-		<script type="text/javascript" src='js/main.js'></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<!-- http://fisforformat.sourceforge.net/#date_f -->
+		<script src='js/date.f-0.5.0-min.js'></script>
+		<script src='js/ajax.js'></script>
+		<script src='js/main.js'></script>
 
-		<script type="text/javascript">
-
-		  var _gaq = _gaq || [];
-		  _gaq.push(['_setAccount', 'UA-43063083-1']);
-		  _gaq.push(['_trackPageview']);
-
-		  (function() {
-		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		  })();
-
+		<script>
+			var _gaq=[['_setAccount','UA-43063083-1'],['_trackPageview']];
+			(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+			g.src='//www.google-analytics.com/ga.js';
+			s.parentNode.insertBefore(g,s)}(document,'script'));
 		</script>
 	</body>
 </html>
