whileaway.js -> main.js

--- a/site/index.html
+++ b/site/index.html
@@ -43,7 +43,7 @@
 		<script src="js/jquery-2.0.3.min.js"></script>
 		<script type="text/javascript" src='js/date.f-0.5.0-min.js'></script> <!-- http://fisforformat.sourceforge.net/#date_f -->
 		<script type="text/javascript" src='js/ajax.js'></script>
-		<script type="text/javascript" src='js/whileaway.js'></script>
+		<script type="text/javascript" src='js/main.js'></script>
 
 		<script type="text/javascript">
 
