Tidied up everything

--- a/site/index.html
+++ b/site/index.html
@@ -3,13 +3,21 @@
 	<head>
 		<meta charset="utf-8">
 		<title>The Scoop</title>
+		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 		<link rel="stylesheet" href="css/main.css">
+
+		<script src="//use.typekit.net/crl6ttj.js"></script>
+		<script>try{Typekit.load();}catch(e){}</script>
 	</head>
 
 	<body>
+		<!--[if lt IE 7]>
+			<p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+		<![endif]-->
+
 		<div class="container">
 			<header>
 				<h1>
