--- a/site/index.html
+++ b/site/index.html
@@ -9,8 +9,8 @@
 
 		<link rel="stylesheet" href="css/main.css">
 
-		<script src="//use.typekit.net/crl6ttj.js"></script>
-		<script>try{Typekit.load();}catch(e){}</script>
+		<!-- <script src="//use.typekit.net/crl6ttj.js"></script>
+		<script>try{Typekit.load();}catch(e){}</script> -->
 	</head>
 
 	<body>
@@ -25,7 +25,8 @@
 
 					<select name="section" id="section">
 						<option value="world">news</option>
-						<option value="uk-news">UK</option>
+						<option value="uk-news">UK news</option>
+						<option value="politics">technology</option>
 						<option value="football">football</option>
 						<option value="film">film</option>
 						<option value="business">business</option>
