--- a/site/index.html
+++ b/site/index.html
@@ -25,11 +25,12 @@
 
 					<select name="section" id="section">
 						<option value="world">news</option>
-						<option value="uk-news">UK</option>
-						<option value="football">football</option>
-						<option value="film">film</option>
 						<option value="business">business</option>
+						<option value="film">film</option>
+						<option value="football">football</option>
 						<option value="politics">politics</option>
+						<option value="football">technology</option>
+						<option value="uk-news">UK</option>
 					</select>
 
 					articles from the past
@@ -45,6 +46,7 @@
 			</header>
 
 			<div class="news"></div>
+			<div class="overlay"></div>
 		</div>
 
 		<span id="section-span"></span>
