--- a/site/index.html
+++ b/site/index.html
@@ -48,9 +48,9 @@
 			<div class="news"></div>
 		</div>
 
-		<span id="section-span"></span>
-		<span id="number-span"></span>
-		<span id="date-span"></span>
+		<span class="form-fix" id="section-span"></span>
+		<span class="form-fix" id="number-span"></span>
+		<span class="form-fix" id="date-span"></span>
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<!-- http://fisforformat.sourceforge.net/#date_f -->
