--- a/site/index.html
+++ b/site/index.html
@@ -30,7 +30,7 @@
 						<option value="film">film</option>
 						<option value="football">football</option>
 						<option value="politics">politics</option>
-						<option value="football">technology</option>
+						<option value="technology">technology</option>
 						<option value="uk-news">UK</option>
 					</select>
 
