Fix clipping, added typekit

--- a/site/index.html
+++ b/site/index.html
@@ -10,8 +10,8 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/animate.min.css">
 
-		<!-- <script src="//use.typekit.net/crl6ttj.js"></script>
-		<script>try{Typekit.load();}catch(e){}</script> -->
+		<script src="//use.typekit.net/crl6ttj.js"></script>
+		<script>try{Typekit.load();}catch(e){}</script>
 	</head>
 
 	<body>
