Inserted link to bug tracker

--- a/site/index.html
+++ b/site/index.html
@@ -53,6 +53,8 @@
 		<span class="form-fix" id="number-span"></span>
 		<span class="form-fix" id="date-span"></span>
 
+		<div id='bugs'><a href='http://github.com/edlongman/thescoop/issues/new' target='_blank' title='Report a bug'>Report a bug&hellip;</a></div>
+
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<!-- http://fisforformat.sourceforge.net/#date_f -->
 		<script src='js/date.f-0.5.0-min.js'></script>
