Stop changing the fucking file names

--- a/site/about.html
+++ b/site/about.html
@@ -3,7 +3,7 @@
 	<head>
     	<title>About</title>
         <link href="css/style_about.css" rel="stylesheet" type="text/css">
-        <link href="css/_normalize.scss" rel="stylesheet" type="text/css">
+        <link href="css/_reset.scss" rel="stylesheet" type="text/css">
 	</head>
     <body>
     	<div class="header">
