Report bug and link hovers

--- a/site/index.html
+++ b/site/index.html
@@ -49,11 +49,15 @@
 			<div class="news"></div>
 		</div>
 
+		<footer>
+			<div class="inner">
+				<a href="https://github.com/edlongman/thescoop/issues/new" target="_blank">Report a bug</a>
+			</div>
+		</footer>
+
 		<span class="form-fix" id="section-span"></span>
 		<span class="form-fix" id="number-span"></span>
 		<span class="form-fix" id="date-span"></span>
-
-		<div id='bugs'><a href='http://github.com/edlongman/thescoop/issues/new' target='_blank' title='Report a bug'>Report a bug&hellip;</a></div>
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<!-- http://fisforformat.sourceforge.net/#date_f -->
