--- a/site/index.html
+++ b/site/index.html
@@ -25,10 +25,10 @@
 					Show me top
 
 					<select name="section" id="section">
-						<option value="world">news</option>
 						<option value="business">business</option>
 						<option value="film">film</option>
 						<option value="football">football</option>
+						<option value="world" selected>news</option>
 						<option value="politics">politics</option>
 						<option value="technology">technology</option>
 						<option value="uk-news">UK</option>
@@ -36,10 +36,10 @@
 
 					articles from the past
 
-					<input type="text" value="10" name="number" id="number" autocomplete="off">
+					<input type="text" value="5" name="number" id="number" autocomplete="off">
 
 					<select name="date" id="date">
-						<option value="days">days</option>
+						<option value="days" selected>days</option>
 						<option value="weeks">weeks</option>
 						<option value="months">months</option>
 					</select>
