--- a/site/index.html
+++ b/site/index.html
@@ -24,7 +24,7 @@
 				<h1>
 					Show me top
 
-					<select name="section" id="section">
+					<select name="section" id="section" tabindex="1">
 						<option value="business">business</option>
 						<option value="film">film</option>
 						<option value="football">football</option>
@@ -36,9 +36,9 @@
 
 					articles from the past
 
-					<input type="text" value="5" name="number" id="number" autocomplete="off">
+					<input type="text" value="5" name="number" id="number" autocomplete="off" tabindex="2">
 
-					<select name="date" id="date">
+					<select name="date" id="date" tabindex="3">
 						<option value="days" selected>days</option>
 						<option value="weeks">weeks</option>
 						<option value="months">months</option>
