Analytics code for webmasters

--- a/site/index.html
+++ b/site/index.html
@@ -12,6 +12,20 @@
 
 		<script src="//use.typekit.net/crl6ttj.js"></script>
 		<script>try{Typekit.load();}catch(e){}</script>
+
+		<script>
+
+		  var _gaq = _gaq || [];
+		  _gaq.push(['_setAccount', 'UA-43063083-1']);
+		  _gaq.push(['_trackPageview']);
+
+		  (function() {
+		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		  })();
+
+		</script>
 	</head>
 
 	<body>
@@ -64,12 +78,5 @@
 		<script src='js/date.f-0.5.0-min.js'></script>
 		<script src='js/ajax.js'></script>
 		<script src='js/main.js'></script>
-
-		<script>
-			var _gaq=[['_setAccount','UA-43063083-1'],['_trackPageview']];
-			(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-			g.src='//www.google-analytics.com/ga.js';
-			s.parentNode.insertBefore(g,s)}(document,'script'));
-		</script>
 	</body>
 </html>
