Fix testing daily news by making url relative

--- a/site/test.html
+++ b/site/test.html
@@ -14,7 +14,7 @@
 			ratio at which to sum: <input type="text" name="ratio" />
 			<input type="submit" />
 		</form>
-		<form action="/guardian_feeds_daily_news" method="GET">
+		<form action="guardian_feeds_daily_news.php" method="GET">
 			<h2>Testing guardian_feed_daily_news.php</h2>
 			start: <input type="text" value="2013-08-01" name="start_time" />
                         end: <input type="text" value="2013-08-06" name="end_time" />
