Added script to fix 1 weeks/days/months. Added html5shiv

--- a/site/index.html
+++ b/site/index.html
@@ -10,6 +10,10 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/animate.min.css">
 
+		<!--[if lt IE 9]>
+		<script src="js/html5shiv.js"></script>
+		<![endif]-->
+
 		<script src="//use.typekit.net/crl6ttj.js"></script>
 		<script>try{Typekit.load();}catch(e){}</script>
 
@@ -34,7 +38,7 @@
 		<div class="container">
 			<header>
 				<h1>
-					Show me top
+					Scoop the top
 
 					<select name="section" id="section" tabindex="1">
 						<option value="business">business</option>
@@ -75,6 +79,6 @@
 		<!-- http://fisforformat.sourceforge.net/#date_f -->
 		<script src='js/date.f-0.5.0-min.js'></script>
 		<script src='js/ajax.js'></script>
-		<script src='js/main.js'></script>
+		<script type="text/javascript" src='js/main.js'></script>
 	</body>
 </html>
