--- a/site/index.html
+++ b/site/index.html
@@ -75,9 +75,10 @@
 		<span class="form-fix" id="date-span"></span>
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="js/jquery.easing.1.3.js"></script>
 		<!-- http://fisforformat.sourceforge.net/#date_f -->
 		<script src='js/date.f-0.5.0-min.js'></script>
 		<script src='js/ajax.js'></script>
-		<script type="text/javascript" src='js/main.js'></script>
+		<script src='js/main.js'></script>
 	</body>
 </html>
