--- a/site/index.html
+++ b/site/index.html
@@ -66,7 +66,12 @@
 
 		<footer>
 			<div class="inner">
-				<a href="https://github.com/edlongman/thescoop/issues/new" target="_blank">Report a bug</a>
+				<a href="#">Share to Facebook</a>
+				<a href="#">or Twitter</a>
+				&#8226;
+				<a href="https://github.com/edlongman/thescoop">Github</a>
+				&#8226;
+				<a href="https://github.com/edlongman/thescoop/issues/new" target="_blank">Report bug</a>
 			</div>
 		</footer>
 
