--- a/site/index.html
+++ b/site/index.html
@@ -66,8 +66,10 @@
 
 		<footer>
 			<div class="inner">
-				<a href="#">Share to Facebook</a>
-				<a href="#">or Twitter</a>
+				Share to
+				<a href="#">Facebook</a>
+				or
+				<a href="#">Twitter</a>
 				&#8226;
 				<a href="https://github.com/edlongman/thescoop">Github</a>
 				&#8226;
