--- a/site/index.html
+++ b/site/index.html
@@ -66,10 +66,10 @@
 
 		<footer>
 			<div class="inner">
-				Share to
-				<a href="#">Facebook</a>
+				Share on
+				<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fthescoop.io" target="_blank">Facebook</a>
 				or
-				<a href="#">Twitter</a>
+				<a href="http://twitter.com/home?status=I+just+used+thescoop.io+to+catch+up+on+the+latest+news.+Check+it+out&#33;" target="_blank">Twitter</a>
 				&#8226;
 				<a href="https://github.com/edlongman/thescoop">Github</a>
 				&#8226;
