Target blank to github link

--- a/site/index.html
+++ b/site/index.html
@@ -71,7 +71,7 @@
 				or
 				<a href="http://twitter.com/home?status=I+just+used+thescoop.io+to+catch+up+on+the+latest+news.+Check+it+out&#33;" target="_blank">Twitter</a>
 				&#8226;
-				<a href="https://github.com/edlongman/thescoop">Github</a>
+				<a href="https://github.com/edlongman/thescoop" target="_blank">Github</a>
 				&#8226;
 				<a href="https://github.com/edlongman/thescoop/issues/new" target="_blank">Report bug</a>
 			</div>
