Added http:// to twitter status

--- a/site/index.html
+++ b/site/index.html
@@ -69,7 +69,7 @@
 				Share on
 				<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fthescoop.io" target="_blank">Facebook</a>
 				or
-				<a href="http://twitter.com/home?status=I+just+used+thescoop.io+to+catch+up+on+the+latest+news.+Check+it+out&#33;" target="_blank">Twitter</a>
+				<a href="http://twitter.com/home?status=I+just+used+http%3A%2F%2Fthescoop.io+to+catch+up+on+the+latest+news.+Check+it+out&#33;" target="_blank">Twitter</a>
 				&#8226;
 				<a href="https://github.com/edlongman/thescoop" target="_blank">Github</a>
 				&#8226;
