--- a/site/index.html
+++ b/site/index.html
@@ -35,33 +35,35 @@
 		<![endif]-->
 
 		<div class="container">
-			<header>
-				<h1>
-					Scoop the top
+			<div class="inner">
+				<header>
+					<h1>
+						Scoop the top
 
-					<select name="section" id="section" tabindex="1">
-						<option value="business">business</option>
-						<option value="film">film</option>
-						<option value="football">football</option>
-						<option value="world" selected>news</option>
-						<option value="politics">politics</option>
-						<option value="technology">technology</option>
-						<option value="uk-news">UK</option>
-					</select>
+						<select name="section" id="section" tabindex="1">
+							<option value="business">business</option>
+							<option value="film">film</option>
+							<option value="football">football</option>
+							<option value="world" selected>news</option>
+							<option value="politics">politics</option>
+							<option value="technology">technology</option>
+							<option value="uk-news">UK</option>
+						</select>
 
-					articles from the past
+						articles from the past
 
-					<input type="text" value="5" name="number" id="number" autocomplete="off" tabindex="2">
+						<input type="text" value="5" name="number" id="number" autocomplete="off" tabindex="2">
 
-					<select name="date" id="date" tabindex="3">
-						<option value="days" selected>days</option>
-						<option value="weeks">weeks</option>
-						<option value="months">months</option>
-					</select>
-				</h1>
-			</header>
+						<select name="date" id="date" tabindex="3">
+							<option value="days" selected>days</option>
+							<option value="weeks">weeks</option>
+							<option value="months">months</option>
+						</select>
+					</h1>
+				</header>
 
-			<div class="news"></div>
+				<div class="news"></div>
+			</div>
 		</div>
 
 		<footer>
