Concatenate ajax.js and main.js and minify main.js to main-ck.js
If you make changes to main.js in the future, contact me to minify it or minify it yourself.

--- a/site/index.html
+++ b/site/index.html
@@ -87,7 +87,6 @@
 		<script src="js/jquery.easing.1.3.js"></script>
 		<!-- http://fisforformat.sourceforge.net/#date_f -->
 		<script src='js/date.f-0.5.0-min.js'></script>
-		<script src='js/ajax.js'></script>
-		<script src='js/main.js'></script>
+		<script src='js/main-ck.js'></script>
 	</body>
 </html>
