--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>The Scoop</title>
-		<meta name="description" content="">
+		<meta name="description" content="The fastest way to catch up on recent news.">
 		<meta name="viewport" content="width=device-width">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
