--- a/site/index.html
+++ b/site/index.html
@@ -87,6 +87,6 @@
 		<script src="js/jquery.easing.1.3.js"></script>
 		<!-- http://fisforformat.sourceforge.net/#date_f -->
 		<script src='js/date.f-0.5.0-min.js'></script>
-		<script src='js/main-ck.js'></script>
+		<script src='js/main.js'></script>
 	</body>
 </html>
