--- a/site/index.html
+++ b/site/index.html
@@ -42,10 +42,15 @@
 
 						<select name="section" id="section" tabindex="1">
 							<option value="business">business</option>
+							<option value="education">education</option>
+							<option value="environment">environment</option>
 							<option value="film">film</option>
 							<option value="football">football</option>
+							<option value="media">media</option>
 							<option value="world" selected>news</option>
 							<option value="politics">politics</option>
+							<option value="science">science</option>
+							<option value="sport">sport</option>
 							<option value="technology">technology</option>
 							<option value="uk-news">UK</option>
 						</select>
