--- a/site/bbc.html
+++ b/site/bbc.html
@@ -3,12 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>The Scoop</title>
-		<meta name="description" content="">
+		<meta name="description" content="The fastest way to catch up on recent news.">
 		<meta name="viewport" content="width=device-width">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="css/animate.min.css">
 
 		<!--[if lt IE 9]>
 		<script src="js/html5shiv.js"></script>
@@ -36,38 +35,52 @@
 		<![endif]-->
 
 		<div class="container">
-			<header>
-				<h1>
-					Scoop the top
+			<div class="inner">
+				<header>
+					<h1>
+						Scoop the top
 
-					<select name="section" id="section" tabindex="1">
-						<option value="business">business</option>
-						<option value="film">film</option>
-						<option value="football">football</option>
-						<option value="world" selected>news</option>
-						<option value="politics">politics</option>
-						<option value="technology">technology</option>
-						<option value="uk-news">UK</option>
-					</select>
+						<select name="section" id="section" tabindex="1">
+							<option value="business">business</option>
+							<option value="education">education</option>
+							<option value="environment">environment</option>
+							<option value="film">film</option>
+							<option value="football">football</option>
+							<option value="media">media</option>
+							<option value="world" selected>news</option>
+							<option value="politics">politics</option>
+							<option value="science">science</option>
+							<option value="sport">sport</option>
+							<option value="technology">technology</option>
+							<option value="uk-news">UK</option>
+						</select>
 
-					articles from the past
+						articles from the past
 
-					<input type="text" value="5" name="number" id="number" autocomplete="off" tabindex="2">
+						<input type="text" value="5" name="number" id="number" autocomplete="off" tabindex="2">
 
-					<select name="date" id="date" tabindex="3">
-						<option value="days" selected>days</option>
-						<option value="weeks">weeks</option>
-						<option value="months">months</option>
-					</select>
-				</h1>
-			</header>
+						<select name="date" id="date" tabindex="3">
+							<option value="days" selected>days</option>
+							<option value="weeks">weeks</option>
+							<option value="months">months</option>
+						</select>
+					</h1>
+				</header>
 
-			<div class="news"></div>
+				<div class="news"></div>
+			</div>
 		</div>
 
 		<footer>
 			<div class="inner">
-				<a href="https://github.com/edlongman/thescoop/issues/new" target="_blank">Report a bug</a>
+				Share on
+				<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fthescoop.io" target="_blank">Facebook</a>
+				or
+				<a href="http://twitter.com/home?status=I+just+used+http%3A%2F%2Fthescoop.io+to+catch+up+on+the+latest+news.+Check+it+out&#33;" target="_blank">Twitter</a>
+				&#8226;
+				<a href="https://github.com/edlongman/thescoop" target="_blank">Github</a>
+				&#8226;
+				<a href="https://github.com/edlongman/thescoop/issues/new" target="_blank">Report bug</a>
 			</div>
 		</footer>
 
@@ -76,9 +89,9 @@
 		<span class="form-fix" id="date-span"></span>
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="js/jquery.easing.1.3.js"></script>
 		<!-- http://fisforformat.sourceforge.net/#date_f -->
 		<script src='js/date.f-0.5.0-min.js'></script>
-		<script src='js/ajax.js'></script>
-		<script type="text/javascript" src='js/main.js'></script>
+		<script src='js/main.js'></script>
 	</body>
 </html>
