--- a/site/index.html
+++ b/site/index.html
@@ -88,7 +88,8 @@
 		<span class="form-fix" id="number-span"></span>
 		<span class="form-fix" id="date-span"></span>
 
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
+		<script src='js/jquery-2.0.3.min.js'/></script>
 		<script src="js/jquery.easing.1.3.js"></script>
 		<!-- http://fisforformat.sourceforge.net/#date_f -->
 		<script src='js/date.f-0.5.0-min.js'></script>
