--- a/site/index.html
+++ b/site/index.html
@@ -38,7 +38,7 @@
 			<div class="inner">
 				<header>
 					<h1>
-						Scoop the top
+						Show me top
 
 						<select name="section" tabindex="1">
 							<option value="business">business</option>
@@ -47,15 +47,15 @@
 							<option value="film">film</option>
 							<option value="football">football</option>
 							<option value="media">media</option>
-							<option value="world">news</option>
 							<option value="politics">politics</option>
 							<option value="science">science</option>
 							<option value="sport">sport</option>
 							<option value="technology">technology</option>
 							<option value="uk-news" selected>UK</option>
+							<option value="world">world</option>
 						</select>
 
-						articles from the past
+						news from the past
 
 						<input type="text" name="number" value="2" autocomplete="off" tabindex="2">
 
@@ -66,11 +66,11 @@
 						</select>
 					</h1>
 				</header>
-
-				<div class="news"></div>
 			</div>
 		</div>
 
+		<div class="news"></div>
+		
 		<footer>
 			<div class="inner">
 				Share on
