Default category now 'uk-news 2 weeks'. Most articles summarise

--- a/site/index.html
+++ b/site/index.html
@@ -47,21 +47,21 @@
 							<option value="film">film</option>
 							<option value="football">football</option>
 							<option value="media">media</option>
-							<option value="world" selected>news</option>
+							<option value="world">news</option>
 							<option value="politics">politics</option>
 							<option value="science">science</option>
 							<option value="sport">sport</option>
 							<option value="technology">technology</option>
-							<option value="uk-news">UK</option>
+							<option value="uk-news" selected>UK</option>
 						</select>
 
 						articles from the past
 
-						<input type="text" value="5" name="number" id="number" autocomplete="off" tabindex="2">
+						<input type="text" value="2" name="number" id="number" autocomplete="off" tabindex="2">
 
 						<select name="date" id="date" tabindex="3">
-							<option value="days" selected>days</option>
-							<option value="weeks">weeks</option>
+							<option value="days">days</option>
+							<option value="weeks" selected>weeks</option>
 							<option value="months">months</option>
 						</select>
 					</h1>
