--- a/site/index.html
+++ b/site/index.html
@@ -40,7 +40,7 @@
 					<h1>
 						Scoop the top
 
-						<select name="section" id="section" tabindex="1">
+						<select name="section" tabindex="1">
 							<option value="business">business</option>
 							<option value="education">education</option>
 							<option value="environment">environment</option>
@@ -57,9 +57,9 @@
 
 						articles from the past
 
-						<input type="text" value="2" name="number" id="number" autocomplete="off" tabindex="2">
+						<input type="text" name="number" value="2" autocomplete="off" tabindex="2">
 
-						<select name="date" id="date" tabindex="3">
+						<select name="date" tabindex="3">
 							<option value="days">days</option>
 							<option value="weeks" selected>weeks</option>
 							<option value="months">months</option>
@@ -84,12 +84,9 @@
 			</div>
 		</footer>
 
-		<span class="form-fix" id="section-span"></span>
-		<span class="form-fix" id="number-span"></span>
-		<span class="form-fix" id="date-span"></span>
+		<span class="form-span"></span>
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<script src="js/jquery.easing.1.3.js"></script>
 		<!-- http://fisforformat.sourceforge.net/#date_f -->
 		<script src='js/date.f-0.5.0-min.js'></script>
 		<script src='js/main.js'></script>
