Add divs '#news' and '#breakdown' to index.html
- remove '.news' div

--- a/site/index.html
+++ b/site/index.html
@@ -69,7 +69,8 @@
 					</h1>
 				</header>
 
-				<div class="news"></div>
+				<div id="news"></div>
+				<div id="breakdown"></div>
 			</div>
 		</div>
 
