Fixed loading and slowed getNews slideDown

--- a/site/index.html
+++ b/site/index.html
@@ -13,8 +13,8 @@
 		<script src="js/html5shiv.js"></script>
 		<![endif]-->
 
-		<script src="//use.typekit.net/crl6ttj.js"></script>
-		<script>try{Typekit.load();}catch(e){}</script>
+		<!-- <script src="//use.typekit.net/crl6ttj.js"></script>
+		<script>try{Typekit.load();}catch(e){}</script> -->
 
 		<script>
 		  var _gaq = _gaq || [];
