--- a/site/index.html
+++ b/site/index.html
@@ -72,9 +72,9 @@
 				<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fthescoop.io" target="_blank">Facebook</a>
 				or
 				<a href="http://twitter.com/home?status=I+just+used+http%3A%2F%2Fthescoop.io+to+catch+up+on+the+latest+news.+Check+it+out&#33;" target="_blank">Twitter</a>
-				&#8226;
+				&sdot;
 				<a href="https://github.com/edlongman/thescoop" target="_blank">Github</a>
-				&#8226;
+				&sdot;
 				<a href="https://github.com/edlongman/thescoop/issues/new" target="_blank">Report bug</a>
 			</div>
 		</footer>
