--- a/site/test.html
+++ b/site/test.html
@@ -10,10 +10,17 @@
 		</form>
 		<form action="ots.php" method="GET">
 			<h2>Testing ots.php</h2>
-			text to sum: <input type="text" name="to_sum" />
+			url to sum: <input type="text" name="to_sum" />
 			ratio at which to sum: <input type="text" name="ratio" />
 			<input type="submit" />
 		</form>
+		<form action="site-ots.php" method="GET">
+                        <h2>Testing site-ots.php</h2>
+                        page to sum: <input type="text" name="url" />
+                        ratio at which to sum: <input type="text" name="ratio" />
+                        <input type="submit" />
+                </form>
+
 		<form action="/guardian_feeds_daily_news" method="GET">
 			<h2>Testing guardian_feed_daily_news.php</h2>
 			start: <input type="text" value="2013-08-01" name="start_time" />
