Added 'About' to footer which links to github readme

--- a/site/index.html
+++ b/site/index.html
@@ -70,6 +70,8 @@
 			<div class="inner">
 				<a href="http://twitter.com/thescoop_io" target="_blank">Twitter</a>
 				&sdot;
+				<a href="https://github.com/edlongman/thescoop#the-scoop">About</a>
+				&sdot;
 				<a href="mailto:mail@thescoop.io" target="_blank">mail@thescoop.io</a>
 				&sdot;
 				<a href="https://github.com/edlongman/thescoop" target="_blank">Github</a>
