Removing target=blank

--- a/site/index.html
+++ b/site/index.html
@@ -68,13 +68,13 @@
 		
 		<footer>
 			<div class="inner">
-				<a href="http://twitter.com/thescoop_io" target="_blank">Twitter</a>
+				<a href="http://twitter.com/thescoop_io">Twitter</a>
 				&sdot;
 				<a href="https://github.com/edlongman/thescoop#the-scoop">About</a>
 				&sdot;
-				<a href="mailto:mail@thescoop.io" target="_blank">mail@thescoop.io</a>
+				<a href="mailto:mail@thescoop.io">mail@thescoop.io</a>
 				&sdot;
-				<a href="https://github.com/edlongman/thescoop" target="_blank">Github</a>
+				<a href="https://github.com/edlongman/thescoop">Github</a>
 			</div>
 		</footer>
 
