Added cookies to remember form data

--- a/site/index.html
+++ b/site/index.html
@@ -81,6 +81,7 @@
 		<span class="form-span"></span>
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src='js/jquery.cookie.js'></script>
 		<script src='js/jquery.hotkeys.js'></script>
 		<script src='js/date.f-0.5.0-min.js'></script>
 		<script src='js/main.js'></script>
