--- a/site/bbc.html
+++ b/site/bbc.html
@@ -80,8 +80,9 @@
 		</footer>
 
 		<span class="form-span"></span>
-
+		
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src='js/jquery.cookie.js'></script>
 		<script src='js/date.f-0.5.0-min.js'></script>
 		<script src='js/main.js'></script>
 	</body>
