added select to the bbc.html site

--- a/site/bbc.html
+++ b/site/bbc.html
@@ -60,6 +60,13 @@
 						<option value="weeks" selected>weeks</option>
 						<option value="months">months</option>
 					</select>
+					
+					from
+					
+					<select name="site" tabindex="3">
+						<option value="bbc">the bbc</option>
+						<option value="guardian" selected>the guardian</option>
+					</select>
 				</h1>
 			</div>
 		</header>
