--- a/site/bbc.html
+++ b/site/bbc.html
@@ -14,15 +14,17 @@
 		<![endif]-->
 
 		<script>
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-43063083-1']);
-			_gaq.push(['_trackPageview']);
-
-			(function() {
-				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			})();
+			if (window.location.href.split('/').pop().match('thescoop.io')){
+				var _gaq = _gaq || [];
+				_gaq.push(['_setAccount', 'UA-43063083-1']);
+				_gaq.push(['_trackPageview']);
+	
+				(function() {
+					var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+					ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+					var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+				})();
+			}
 		</script>
 	</head>
 
