the dangers of copy pasting…..

--- a/site/bbc.html
+++ b/site/bbc.html
@@ -14,7 +14,7 @@
 		<![endif]-->
 
 		<script>
-			if (window.location.href.split('/').pop().match('thescoop.io')){
+			if (window.location.href.match('thescoop.io')){
 				var _gaq = _gaq || [];
 				_gaq.push(['_setAccount', 'UA-43063083-1']);
 				_gaq.push(['_trackPageview']);
